Full page seems to be done

--- a/index.html
+++ b/index.html
@@ -33,5 +33,72 @@
         </p>
     </div>
 
+    <div class="types-header">
+        Some types of corruption
+    </div>
+
+    <div class="block">
+        <div class="info-elements">
+            <div class="types-container">
+                <div class="corruption-type">
+                    <p class="title">
+                        Bribery
+                    </p>
+                    <p class="body">
+                        Transparency International defines bribery as: the offering, promising, giving, 
+                        accepting or soliciting of an advantage as an inducement for an action which is 
+                        illegal, unethical or a breach of trust. Inducements can take the form of money, 
+                        gifts, loans, fees, rewards or other advantages (taxes, services, donations, favours etc.).
+                    </p>
+                </div>
+                <div class="corruption-type">
+                    <p class="title">
+                        Embezzlement
+                    </p>
+                    <p class="body">
+                        This is a crime that consists of withholding assets for the purpose of conversion 
+                        of such assets, by one or more persons to whom the assets were entrusted, either 
+                        to be held or to be used for specific purposes. Embezzlement is a type of 
+                        financial fraud.
+                    </p>
+                </div>
+                <div class="corruption-type">
+                    <p class="title">
+                        Electoral fraud
+                    </p>
+                    <p class="body">
+                        Sometimes referred to as election manipulation, voter fraud or vote rigging, 
+                        involves illegal interference with the process of an election, either by 
+                        increasing the vote share of a favored candidate, depressing the vote share of 
+                        rival candidates, or both.
+                    </p>
+                </div>
+                <div class="corruption-type">
+                    <p class="title">
+                        Conflict of interest
+                    </p>
+                    <p class="body">
+                        A situation in which an entity or individual becomes unreliable because of a 
+                        clash between personal (or self-serving) interests and professional duties or
+                        responsibilities. An example of this could be representing a family member in court.
+                    </p>
+                </div>
+            </div>
+            
+        </div>
+        <div>
+
+        </div>
+        <div class="jojo-github">
+            <div>
+                
+                <img src="./src/git.jpg">
+                <img id="git" src="./src/github.png">
+                <p class="follow">Follow <a target="_blank" href="https://github.com/jquirinoc-dev">@jquirinoc-dev</a> on Github
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
