Buttons added at the bottom of each page

--- a/combat.html
+++ b/combat.html
@@ -85,7 +85,9 @@
                 bribing a police officer. For a lot of Mexicans, that is the only type of corruption.”
             </div>
         </div>
-        
     </div>
+    <div class="bottom-button">
+        <a href="./report.html"><button>Go make a report</button></a>
+   </div>
 </body>
 </html>
