--- a/index.html
+++ b/index.html
@@ -100,5 +100,9 @@
         </div>
     </div>
 
+    <div class="bottom-button">
+         <a href="./combat.html"><button>¿How de we fight corruption?</button></a>
+    </div>
+
 </body>
 </html>
