--- a/report.html
+++ b/report.html
@@ -112,5 +112,8 @@
             <button id="reporter">Submit</button>
         </form>
     </div>
+    <div class="bottom-button">
+        <a href="./index.html"><button>Home</button></a>
+   </div>
 </body>
 </html>
